src/test/deca/context/valid/inheritance/inheritance_chain_3.deca
// Description :
//    Chaîne d'héritage de profondeur 3 avec méthodes.
//
// Resultats :
//    OK

class A {
    int f() {
        return 1;
    }
}

class B extends A {
}

class C extends B {
}

{
}

