src/test/deca/context/invalid/return/return_wrong_type_float_in_int_custom.deca
// Description :
// return d'un float dans méthode int
//
// Resultats :
// Erreur contextuelle
// Ligne 6 : type de retour incompatible

class C {
    int f() {
        return 3.14;
    }
}
